--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             </a>
         </h1>
         <div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
-          This is another test, let&rsquo;s see what gonna happen!
+          This test file has been updated, what a surprise?
         </div>
           <a href="https://xieweialex.github.io/post/newfile/" class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
         
