Update personal info

--- a/404.html
+++ b/404.html
@@ -56,7 +56,7 @@
                 <summary class="Header-link" aria-label="View profile and more"
                     data-ga-click="Header, show menu, icon:avatar">
                     
-                    <img alt="" class="avatar" src="https://example.com/images/avatar.png" height="20" width="20">
+                    <img alt="" class="avatar" src="https://upload.wikimedia.org/wikipedia/en/5/5f/Original_Doge_meme.jpg" height="20" width="20">
                     
                 </summary>
             </details>
